--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -66,5 +66,13 @@
 </blockquote>
 
 
+<p class="blog"> Reading the PayPal founding story from Jessica Livingston’s Founders at Work makes me appreciate how Max Levchin and Peter Thiel, the two co-founders had to iterate through a number of ideas before they finally found product market fit. As Max Levchin puts it:
+</p>
+
+<blockquote>
+	<p class="blog">I think we didn't know what we were doing. I think the hallmark of a really good entrepreneur is that you're not really going to build one specific company. The goal—at least the way I think about entrepreneurship—is you realize one day that you can't really work for anyone else. You have to start your own thing. It almost doesn't matter what that thing is. We had six different business plan changes, and then the last one was PayPal. If that one didn't work out, if we still had the money and the people, obviously we would not have given up. We would have iterated on the business model and done something else. I don't think there was ever any clarity as to who we were until we knew it was working. By then, we'd figured out our PR pitch and told everyone what we do and who we are.</p>
+
+</blockquote>
+
 </body>
 </html>
