--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -96,6 +96,27 @@ Perhaps to put it another way, Thiel is giving the advice he is incentivised to 
 So in effect Thiel is encouraging people to do crazier things.This is great! There are  so many new things to be built! However it needs to be coupled with the correct frame of idea iteration in order to make it actionably useful for startup founders.
 </p>
 
+<h3>How some SaaS startups are built </h3>
+
+<p class="blog"> In reality the way some highly successful startups are built is via iterating through ideas and quickly killing the ones that don’t work. Many stories by founders are laid bare in Jessica Livingston’s Founders at Work (as the one mentioned above with Max Levchin), in these <a href="https://www.youtube.com/watch?v=_6pl5GG8RQ4">two</a> <a href="https://www.youtube.com/watch?v=l-vfn97QTr0">videos</a> of Peter Reinhardt talking about their experience with Segment as well as in the Twitch journey. Their process looks something like this:
+</p>
+
+<ol>
+	<li>Find a team of people who will stick together for a long time</li>
+	<li>Figure out an initial defendable idea to raise seed funding with</li>
+	<li>Iterate in the space until you find the specific product that users really want. This means:</li>
+	<ol>
+		<li>Talk to customers to understand what they need</li>
+		<li>Build product after product quickly</li>
+		<li>See if there is change in the demand for this product (ie are your metrics going haywire?)</li>
+		<li>Repeat. This is the hard part where many companies die. Possible reasons of death are running out of money and cofounder relations </li>
+	</ol>
+	<li>Once there is a product that satisfies the need of the core group of customers, raise Series A and ramp up sales</li>
+
+</ol>
+
+<p class="blog">So is this story better than the one told by Thiel? Obviously one could just say that the points outlined above are the backbone of another narrative. That is entirely correct. Just as most narratives this also has it’s positive aspects (it’s more actionable than the high level motivational story told by Thiel) as well as it’s shortcomings (doesn't generalise to bio and hardware). So adjust your seat and figure out which stories are useful for you and which ones aren’t. 
+ </p>
 
 </body>
 </html>
