--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -116,15 +116,15 @@ So in effect Thiel is encouraging people to do crazier things.This is great! The
 </ol>
 
 <p class="blog">
-<b>1</b>Find a team of people who will stick together for a long time
-<b>2</b>Figure out an initial defendable idea to raise seed funding with
-<b>3</b>Iterate in the space until you find the specific product that users really want. This means:
-<b>4</b>
-	<b>a.</b>Talk to customers to understand what they need
-	<b>b.</b>Build product after product quickly
-	<b>c.</b>See if there is change in the demand for this product (ie are your metrics going haywire?)
+<br><b>1</b>Find a team of people who will stick together for a long time
+<br><b>2</b>Figure out an initial defendable idea to raise seed funding with
+<br><b>3</b>Iterate in the space until you find the specific product that users really want. This means:
+
+<br><b>a.</b>Talk to customers to understand what they need
+<br><b>b.</b>Build product after product quickly
+<br><b>c.</b>See if there is change in the demand for this product (ie are your metrics going haywire?)
 	<b>d.</b>Repeat. This is the hard part where many companies die. Possible reasons of death are running out of money and cofounder relations
-<b>5.</b>Once there is a product that satisfies the need of the core group of customers, raise Series A and ramp up sales
+<b>4.</b>Once there is a product that satisfies the need of the core group of customers, raise Series A and ramp up sales
 
 </p>
 
