--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -101,30 +101,16 @@ So in effect Thiel is encouraging people to do crazier things.This is great! The
 <p class="blog"> In reality the way some highly successful startups are built is via iterating through ideas and quickly killing the ones that don’t work. Many stories by founders are laid bare in Jessica Livingston’s Founders at Work (as the one mentioned above with Max Levchin), in these <a href="https://www.youtube.com/watch?v=_6pl5GG8RQ4">two</a> <a href="https://www.youtube.com/watch?v=l-vfn97QTr0">videos</a> of Peter Reinhardt talking about their experience with Segment as well as in the <a href="https://www.youtube.com/watch?v=2vG-Sxk-c2k">Twitch journey</a>. Their process looks something like this:
 </p>
 
-<ol>
-	<li>Find a team of people who will stick together for a long time</li>
-	<li>Figure out an initial defendable idea to raise seed funding with</li>
-	<li>Iterate in the space until you find the specific product that users really want. This means:</li>
-	<ol>
-		<li>Talk to customers to understand what they need</li>
-		<li>Build product after product quickly</li>
-		<li>See if there is change in the demand for this product (ie are your metrics going haywire?)</li>
-		<li>Repeat. This is the hard part where many companies die. Possible reasons of death are running out of money and cofounder relations </li>
-	</ol>
-	<li>Once there is a product that satisfies the need of the core group of customers, raise Series A and ramp up sales</li>
-
-</ol>
-
 <p class="blog">
-<br><b>1</b>Find a team of people who will stick together for a long time
-<br><b>2</b>Figure out an initial defendable idea to raise seed funding with
-<br><b>3</b>Iterate in the space until you find the specific product that users really want. This means:
+<br><b>1.</b> Find a team of people who will stick together for a long time
+<br><b>2.</b> Figure out an initial defendable idea to raise seed funding with
+<br><b>3.</b> Iterate in the space until you find the specific product that users really want. This means:
 
-<br><b>a.</b>Talk to customers to understand what they need
-<br><b>b.</b>Build product after product quickly
-<br><b>c.</b>See if there is change in the demand for this product (ie are your metrics going haywire?)
-	<b>d.</b>Repeat. This is the hard part where many companies die. Possible reasons of death are running out of money and cofounder relations
-<b>4.</b>Once there is a product that satisfies the need of the core group of customers, raise Series A and ramp up sales
+&nbsp;<br><b>a.</b> Talk to customers to understand what they need
+&nbsp;<br><b>b.</b> Build product after product quickly
+&nbsp;<br><b>c.</b> See if there is change in the demand for this product (ie are your metrics going haywire?)
+&nbsp;<br><b>d.</b> Repeat. This is the hard part where many companies die. Possible reasons of death are running out of money and cofounder relations
+<br><b>4.</b> Once there is a product that satisfies the need of the core group of customers, raise Series A and ramp up sales
 
 </p>
 
