--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -106,10 +106,10 @@ So in effect Thiel is encouraging people to do crazier things.This is great! The
 <br><b>2.</b> Figure out an initial defendable idea to raise seed funding with
 <br><b>3.</b> Iterate in the space until you find the specific product that users really want. This means:
 
-&nbsp;<br><b>a.</b> Talk to customers to understand what they need
-&nbsp;<br><b>b.</b> Build product after product quickly
-&nbsp;<br><b>c.</b> See if there is change in the demand for this product (ie are your metrics going haywire?)
-&nbsp;<br><b>d.</b> Repeat. This is the hard part where many companies die. Possible reasons of death are running out of money and cofounder relations
+<br>&nbsp;<b>a.</b> Talk to customers to understand what they need
+<br>&nbsp;<b>b.</b> Build product after product quickly
+<br>&nbsp;<b>c.</b> See if there is change in the demand for this product (ie are your metrics going haywire?)
+<br>&nbsp;<b>d.</b> Repeat. This is the hard part where many companies die. Possible reasons of death are running out of money and cofounder relations
 <br><b>4.</b> Once there is a product that satisfies the need of the core group of customers, raise Series A and ramp up sales
 
 </p>
