--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -44,7 +44,7 @@
 
 <h2>Startup narratives</h2>
 
-<p class="blog">There are few widely accepted narratives and stories in the startup world, and besides specific areas like SaaS companies are often very diverse with limited overlap. However it’s obviously clear that having a good intuition for ideas matters a lot for starting a company. Perhaps Thiel is the person who most embodies the essence of this theory. Being a contrarian and having a key secret is outlined well in Zero to One: </p>
+<p class="blog">There are few widely accepted narratives and stories in the startup world, and besides specific areas like SaaS companies are often very diverse with limited overlap. However it’s obviously clear that having <a href="https://guzey.com/ideas-not-mattering-is-a-psyop/">a good intuition for ideas</a> matters a lot for starting a company. Perhaps Thiel is the person who most embodies the essence of this theory. Being a contrarian and having a key secret is outlined well in <i>Zero to One</i>: </p>
 
 <blockquote>
 	<i>
@@ -66,7 +66,7 @@
 </blockquote>
 
 
-<p class="blog"> Reading the PayPal founding story from Jessica Livingston’s Founders at Work makes me appreciate how Max Levchin and Peter Thiel, the two co-founders had to iterate through a number of ideas before they finally found product market fit. As Max Levchin puts it:
+<p class="blog"> Reading the PayPal founding story from <i>Jessica Livingston’s <a href="http://www.foundersatwork.com/">Founders at Work</a></i> makes me appreciate how Max Levchin and Peter Thiel, the two co-founders had to iterate through a number of ideas before they finally found product market fit. As Max Levchin puts it:
 </p>
 
 <blockquote>
