--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ Hi there! This is my blog
 <br/>
 <br>
 <div>
+	<a href=startup_narratives.html>Startup narratives</a>
+<br>
 	<a href=cool_graphs.html>Graphs of cool long term trends</a>
 <br>
 	<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
