--- a/startup_narratives.html
+++ b/startup_narratives.html
@@ -43,8 +43,7 @@
 </div>
 
 <h2>Startup narratives</h2>
-
-<p class="blog">There are few widely accepted narratives and stories in the startup world, and besides specific areas like SaaS companies are often very diverse with limited overlap. However it’s obviously clear that having <a href="https://guzey.com/ideas-not-mattering-is-a-psyop/">a good intuition for ideas</a> matters a lot for starting a company. Perhaps Thiel is the person who most embodies the essence of this theory. Being a contrarian and having a key secret is outlined well in <i>Zero to One</i>: </p>
+<p class="blog"> <i>October 2021</i> There are few widely accepted narratives and stories in the startup world, and besides specific areas like SaaS companies are often very diverse with limited overlap. However it’s obviously clear that having <a href="https://guzey.com/ideas-not-mattering-is-a-psyop/">a good intuition for ideas</a> matters a lot for starting a company. Perhaps Thiel is the person who most embodies the essence of this theory. Being a contrarian and having a key secret is outlined well in <i>Zero to One</i>: </p>
 
 <blockquote>
 	<i>
