--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ Hi there! This is my blog
 <br>
 	<a href=cool_graphs.html>Graphs of cool long term trends</a>
 <br>
+	<a href=mask_use_hungary.html>For mask use in Hungary</a>
+<br>
 	<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
 <br>
 	<a href="latex_test.html"> How do I Latex within HTML?</a>
