--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Hi there! This is my blog
 <br>
 	<a href=cool_graphs.html>Graphs of cool long term trends</a>
 <br>
-	<a href=mask_use_hungary.html>For mask use in Hungary</a>
+	<a href=mask_use_hungary.html>[Mirror] For mask use in Hungary</a>
 <br>
 	<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
 <br>
