--- a/consulting.html
+++ b/consulting.html
@@ -14,7 +14,7 @@
 	  gtag('config', 'UA-163112737-2');
 	</script>
 
-	<title>Graphs of cool trends</title>
+	<title>Hire Ago</title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta charset="UTF-8">
