updated about page

--- a/about.html
+++ b/about.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163112737-2"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-	  gtag('config', 'UA-163112737-2');
+		gtag('config', 'UA-163112737-2');
 	</script>
 
 
@@ -20,50 +21,55 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<script src="dark.js"></script>
 
-<!-- Hey! Welcome here, enjoy reading this and lmk how I could improve it.
+	<!-- Hey! Welcome here, enjoy reading this and lmk how I could improve it.
 There is one easter egg, however not on this page. Also you should def email me at ago@agolajko.com-->
 </head>
 
 <body>
-<button onclick="myFunction()">Dark</button>
+	<button onclick="myFunction()">Dark</button>
 
-<h1>Ago Lajko</h1>
+	<h1>Ago Lajko</h1>
 
-<div class="">
-	<a href="about.html"class="inactiveLink">
-		<h2 >About</h2>
-	</a>
+	<div class="">
+		<a href="about.html" class="inactiveLink">
+			<h2>About</h2>
+		</a>
 
-	<a href="/">
-		<h2 >Blog</h2>
-	</a>
-</div>
-
-
-
-<div>
-<div>
-<img id="profile" src="img/ago_profile.jpg" alt="ohoto" title=alt_link>
-</div>
-<br/>
-<div>
-<p></p>
+		<a href="/">
+			<h2>Blog</h2>
+		</a>
+	</div>
 
 
-<br/>
-Contact me on:
-<a href="https://www.twitter.com/agolajko"> Twitter</a>
-<br/>
-Or via email at: <a href="mailto:ago@agolajko.com">ago@agolajko.com</a>
-<br/>
 
-My runs on <a href="https://www.strava.com/athletes/47783507"> Strava</a>
+	<div>
+		<div>
+			<img id="profile" src="img/ago_profile.jpg" alt="ohoto" title=alt_link>
+		</div>
+		<br />
+		<div>
+			<p></p>
 
-<script>
-	var alt_num = Math.floor(Math.random() * 2500) + 1;
-	var alt_link = "https://xkcd.com/"+ alt_num.toString()
-	document.getElementById("profile").title = alt_link
-</script>
+
+			<br />
+			Building <a href="https://www.scorpu.com"> Scorpu</a> the AI back office for solo professionals.
+			<br />
+
+			Follow me on
+			<a href="https://www.threads.com/@ago.lajko"> Threads</a> or <a
+				href="https://www.linkedin.com/in/ago-lajko/"> Linkedin</a>
+			<br />
+			Reach me via email at: <a href="mailto:ago@agolajko.com">ago@agolajko.com</a>
+			<br />
+
+			Or follow me physically via <a href="https://www.strava.com/athletes/47783507"> Strava</a>
+
+			<script>
+				var alt_num = Math.floor(Math.random() * 2500) + 1;
+				var alt_link = "https://xkcd.com/" + alt_num.toString()
+				document.getElementById("profile").title = alt_link
+			</script>
 
 </body>
+
 </html>
