outdated web3 economy

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <html>
 
 <head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163112737-2"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-	  gtag('config', 'UA-163112737-2');
+		gtag('config', 'UA-163112737-2');
 	</script>
 
 	<title>Blog</title>
 	<link rel="stylesheet" href="style.css">
-  <link rel="canonical" href="https://agolajko.com/index.html">
+	<link rel="canonical" href="https://agolajko.com/index.html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<script src="dark.js"></script>
@@ -26,37 +26,40 @@
 </head>
 
 <body style="margin-left:18%;margin-right:18%">
-<button onclick="myFunction()">Dark</button>
+	<button onclick="myFunction()">Dark</button>
 
-<h1 >Ago Lajko</h1>
+	<h1>Ago Lajko</h1>
 
-<div class="">
+	<div class="">
 
-	<a href="about.html">
-		<h2 >About</h2>
-	</a>
+		<a href="about.html">
+			<h2>About</h2>
+		</a>
 
-	<a href="/" class="inactiveLink">
-		<h2 >Blog</h2>
-	</a>
+		<a href="/" class="inactiveLink">
+			<h2>Blog</h2>
+		</a>
 
-</div>
+	</div>
 
 
-Hi there! This is my blog
-<br/>
-<br>
-<div>
-	<a href=startup_narratives.html>Startup narratives</a>
-<br>
-	<a href=cool_graphs.html>Graphs of cool long term trends</a>
-<br>
-	<a href=mask_use_hungary.html>[Mirror] For mask use in Hungary</a>
-<br>
-	<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
-<br>
-	<a href="latex_test.html"> How do I Latex within HTML?</a>
-</div>
+	Hi there! This is my blog
+	<br />
+	<br>
+	<div>
+		<a href=startup_narratives.html>Startup narratives</a>
+		<br>
+		<a href=web3-economy.html>(Outdated) Web3 economy</a>
+		<br>
+		<a href=cool_graphs.html>Graphs of cool long term trends</a>
+		<br>
+		<a href=mask_use_hungary.html>[Mirror] For mask use in Hungary</a>
+		<br>
+		<a href="limits_light_microscopy.html">Optical limitations of light microscopy</a>
+		<br>
+		<a href="latex_test.html"> How do I Latex within HTML?</a>
+	</div>
 
 </body>
+
 </html>
